# physics-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  imgui.ini  main.cpp  vcpkg.json
Math/: math.hpp
Physics/: Body.hpp  Scene.hpp  Shape.hpp
bodies/: Body.h  Scene.h  Shape.h
math/: math.hpp
physics/: body.cpp  body.hpp  scene.cpp  shape.hpp
src/: main.cpp
src/app/: app.cpp  app.hpp  camera.cpp  camera.hpp  model.cpp  model.hpp  shader.glsl  shared.inl  texture.cpp  texture.hpp  window.cpp  window.hpp
src/app/assets/: sphere.gltf
src/math/: matrix.hpp  quaternion.hpp  types.hpp  vector.hpp
src/physics/: body.hpp  contact_t.h  intersect.cpp  intersect.hpp  scene.cpp  scene.hpp  shape.hpp
